# termux-gui-c-bindings

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  TODO  TUTORIAL.md  push.sh  termux-gui.h  termux-gui.hpp  termuxgui.cpp
.github/workflows/: build.yml
demos/: es2gears.c
docs/html/: activity_8h.html  activity_8h.js  activity_8h_source.html  annotated.html  annotated_dup.js  bind_8h_source.html  cdefs_8hpp_source.html  classes.html  classnlohmann_1_1basic__json-members.html  classnlohmann_1_1basic__json.html  classnlohmann_1_1byte__container__with__subtype-members.html  classnlohmann_1_1byte__container__with__subtype.html  classnlohmann_1_1detail_1_1binary__reader-members.html  classnlohmann_1_1detail_1_1binary__reader.html  classnlohmann_1_1detail_1_1binary__writer-members.html  classnlohmann_1_1detail_1_1binary__writer.html  classnlohmann_1_1detail_1_1exception-members.html  classnlohmann_1_1detail_1_1exception.html  classnlohmann_1_1detail_1_1file__input__adapter-members.html  classnlohmann_1_1detail_1_1file__input__adapter.html  classnlohmann_1_1detail_1_1input__stream__adapter-members.html  classnlohmann_1_1detail_1_1input__stream__adapter.html  classnlohmann_1_1detail_1_1invalid__iterator-members.html  classnlohmann_1_1detail_1_1invalid__iterator.html  classnlohmann_1_1detail_1_1iter__impl-members.html  classnlohmann_1_1detail_1_1iter__impl.html  classnlohmann_1_1detail_1_1iteration__proxy-members.html  classnlohmann_1_1detail_1_1iteration__proxy.html  classnlohmann_1_1detail_1_1iteration__proxy__value-members.html  classnlohmann_1_1detail_1_1iteration__proxy__value.html  classnlohmann_1_1detail_1_1iterator__input__adapter-members.html  classnlohmann_1_1detail_1_1iterator__input__adapter.html  classnlohmann_1_1detail_1_1json__ref-members.html  classnlohmann_1_1detail_1_1json__ref.html  classnlohmann_1_1detail_1_1json__reverse__iterator-members.html  classnlohmann_1_1detail_1_1json__reverse__iterator.html  classnlohmann_1_1detail_1_1json__sax__acceptor-members.html  classnlohmann_1_1detail_1_1json__sax__acceptor.html  classnlohmann_1_1detail_1_1json__sax__dom__callback__parser-members.html  classnlohmann_1_1detail_1_1json__sax__dom__callback__parser.html  (+411 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  (+95 more)
include/termuxgui/: activity.h  activity.hpp  connection.h  connection.hpp  create.h  event.hpp  events.h  exceptions.hpp  hardware_buffer.h  notification.h  remote.h  termuxgui.h  termuxgui.hpp  textview.hpp  types.h  types.hpp  view.hpp  viewgroup.hpp  views.h  webview.h
manifests/: arm64.json  armv7.json  current.json  i686.json  x86_64.json
src/: activity.cpp  bindsocket.c  cdefs.hpp  connection.cpp  connection.hpp  create.cpp  event.cpp  hardwarebuffer.cpp  includeproto.h  maindoc.md  notification.cpp  remote.cpp  rethrow.h  termux-gui.h  termux-gui.hpp  termuxgui.cpp  termuxgui_c.cpp  textview.cpp  types.hpp  view.cpp  viewgroup.cpp  webview.cpp
src/common/: bind.h  connection.cpp  connection.hpp  exceptions.hpp
src/impl/: Connection.cpp  activity.cpp  activity.hpp  bind.c  connection.cpp  connection.hpp  textview.cpp  textview.hpp  types.hpp  view.cpp  view.hpp  viewgroup.cpp  viewgroup.hpp
tests/: test1.c
tutorial/c/: activity_events.c  buffer_gl.c  buffer_sdl.c  hello_activity.c  hello_reactivity.c  hello_scrollview.c  hello_textview.c  hello_world.c  imageview_mpv.c
tutorial/cpp/: hello_world.cpp
